@@ -1,6 +1,7 @@
 ﻿Pre2
 + Added a scrollbar for the description
 + Meta mod info is now stored in config
++ Detects conflicts (when installing, still needs to be tested further)
 
 Pre1
 + First prerelease
